Creates contact section

--- a/src/app/landing-page/navbar/navbar.component.html
+++ b/src/app/landing-page/navbar/navbar.component.html
@@ -20,7 +20,7 @@
           <a class="nav-link">Cobertura</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link">Contacto</a>
+          <a data-scroll href="#contact" class="nav-link">Contacto</a>
         </li>
       </ul>
       <form class="form-inline waves-effect waves-light">
