--- a/src/app/landing-page/content/carousel/carousel.component.html
+++ b/src/app/landing-page/content/carousel/carousel.component.html
@@ -18,9 +18,9 @@
       <div class="full-bg-img flex-center white-text">
         <ul class="animated fadeInUp col-md-12">
           <li>
-            <h1 class="h1-responsive flex-item">Titulo del slide 1</h1>
+            <h1 class="h1-responsive flex-item">DEALERS</h1>
             <li>
-              <p class="flex-item">Subtitulo del slide 1</p>
+              <p class="flex-item">Bienvenido</p>
             </li>
             <li>
               <a href="#" class="btn red accent-4 btn-lg flex-item waves-effect waves-light">Regístrate</a>
@@ -42,10 +42,10 @@
       <div class="full-bg-img flex-center white-text">
         <ul class="animated fadeInUp col-md-12">
           <li>
-            <h1 class="h1-responsive">Titulo slide 2</h1>
+            <h1 class="h1-responsive">DEALERS</h1>
           </li>
           <li>
-            <p>Subtitulo slide 2</p>
+            <p>Bienvenido</p>
           </li>
           <li>
             <a href="#" class="btn red accent-4 btn-lg flex-item waves-effect waves-light">Regístrate</a>
@@ -67,10 +67,10 @@
       <div class="full-bg-img flex-center white-text">
         <ul class="animated fadeInUp col-md-12">
           <li>
-            <h1 class="h1-responsive">Titulo slide 3</h1>
+            <h1 class="h1-responsive">DEALERS</h1>
           </li>
           <li>
-            <p>Subtitulo slide 3</p>
+            <p>Bienvenido</p>
           </li>
           <li>
             <a href="#" class="btn red accent-4 btn-lg flex-item waves-effect waves-light">Regístrate</a>
