--- a/src/app/landing-page/content/services/services.component.html
+++ b/src/app/landing-page/content/services/services.component.html
@@ -1,3 +1,4 @@
+<a name="services">
 <div class="container">
   <div class="row">
     <h1 class="h1-responsive section-title"><span class="indigo-text">|</span> Servicios <span class="indigo-text">|</span></h1>
