--- a/src/app/landing-page/content/contact/contact.component.html
+++ b/src/app/landing-page/content/contact/contact.component.html
@@ -8,34 +8,82 @@
     <div class="col-md-9">
       	<div class="box wow fadeInLeftBig" data-wow-duration="1.5s">
 	      	<h3>Danos tus datos</h3>
+			
+			<form novalidate [formGroup] = "form" >
 
 	      	<!-- Campo del nombre y apellido -->
-	    	<div class="md-form">
-	    		<i class="fa fa-user prefix"></i>
-			    <input type="text" id="form1" class="form-control">
-			    <label for="form1" class="">Nombre y apellido</label>
+	      	<div class="form-group">
+		    	<div class="md-form">
+		    		<i class="fa fa-user prefix"></i>
+				    <input type="text" id="name" class="form-control" formControlName="name">
+				    <label for="name" class="">Nombre y apellido</label>
+
+				    <div *ngIf = "form.controls.name.errors && form.controls.name.dirty">
+						<div *ngIf = "form.controls.name.errors.required" class="alert alert-danger">
+							El campo es requerido
+						</div>
+						<div *ngIf = "form.controls.name.errors.minlength" class="alert alert-danger">
+							El campo requiere minimo 3 caracteres
+						</div>
+					</div>
+			 	</div>
 		 	</div>
 
 		 	<!-- Campo del correo -->
-		 	<div class="md-form">
-	    		<i class="fa fa-envelope prefix"></i>
-		    	<input type="text" id="form2" class="form-control">
-		    	<label for="form2">Correo</label>
+		 	<div class="form-group">
+			 	<div class="md-form">
+		    		<i class="fa fa-envelope prefix"></i>
+			    	<input type="text" id="email" class="form-control" formControlName="email">
+			    	<label for="email">Correo</label>
+
+			    	<div *ngIf = "form.controls.email.errors && form.controls.email.dirty">
+						<div *ngIf = "form.controls.email.errors.required" class="alert alert-danger">
+							El campo es requerido
+						</div>
+					</div>
+				</div>
 			</div>
+
 			
 			<!-- Campo del número de celular -->
-			<div class="md-form">
-	    		<i class="fa fa-mobile prefix"></i>
-		    	<input type="text" id="form2" class="form-control">
-		    	<label for="form2">Número de celular</label>
+			<div class="form-group">
+				<div class="md-form">
+		    		<i class="fa fa-mobile prefix"></i>
+			    	<input type="number" id="number" class="form-control" formControlName="number">
+			    	<label for="number">Número de celular</label>
+
+			    	<div *ngIf = "form.controls.number.errors && form.controls.number.dirty">
+						<div *ngIf = "form.controls.number.errors.required" class="alert alert-danger">
+							El campo es requerido
+						</div>
+
+						<div *ngIf = "form.controls.number.errors.sinEspacios" class="alert alert-danger">
+							El nombre no debe contener espacios.
+						</div>
+					</div>
+				</div>
 			</div>
 
 			<!-- Campo del mensaje -->
-			<div class="md-form">
-			    <i class="fa fa-pencil prefix"></i>
-			    <textarea type="text" id="form8" class="md-textarea"></textarea>
-			    <label for="form8">Tu mensaje</label>
+			<div class="form-group">
+				<div class="md-form">
+				    <i class="fa fa-pencil prefix"></i>
+				    <textarea type="text" id="message" class="md-textarea" formControlName="message"></textarea>
+				    <label for="message">Tu mensaje</label>
+
+				    <div *ngIf = "form.controls.message.errors && form.controls.message.dirty">
+						<div *ngIf = "form.controls.message.errors.required" class="alert alert-danger">
+							El campo es requerido
+						</div>		
+						<div *ngIf = "form.controls.message.errors.maxlength" class="alert alert-danger">
+							El campo requiere maximo 250 caracteres
+						</div>
+					</div>
+
+				</div>
 			</div>
+
+			</form>
 
       	</div>
     </div>
