--- a/src/app/landing-page/content/contact/contact.component.html
+++ b/src/app/landing-page/content/contact/contact.component.html
@@ -18,9 +18,9 @@
 				    <input type="text" id="name" class="form-control" formControlName="name">
 				    <label for="name" class="">Nombre y apellido</label>
 
-				    <div *ngIf = "form.controls.name.errors && form.controls.name.dirty">
+				    <div *ngIf = "form.controls.name.errors && form.controls.name.touched">
 						<div *ngIf = "form.controls.name.errors.required" class="alert alert-danger">
-							El campo es requerido
+							El campo nombre y apellido es requerido
 						</div>
 						<div *ngIf = "form.controls.name.errors.minlength" class="alert alert-danger">
 							El campo requiere minimo 3 caracteres
@@ -36,10 +36,14 @@
 			    	<input type="text" id="email" class="form-control" formControlName="email">
 			    	<label for="email">Correo</label>
 
-			    	<div *ngIf = "form.controls.email.errors && form.controls.email.dirty">
-						<div *ngIf = "form.controls.email.errors.required" class="alert alert-danger">
-							El campo es requerido
+			    	<div *ngIf = "form.controls.email.errors && form.controls.email.touched">
+						<div *ngIf = "form.controls.email.errors.required"  class="alert alert-danger">
+							El campo correo es requerido
 						</div>
+
+						<div *ngIf=" form.controls.email.errors.pattern" class="alert alert-danger"> 
+          					El correo no es valido
+        				</div>
 					</div>
 				</div>
 			</div>
@@ -52,9 +56,9 @@
 			    	<input type="number" id="number" class="form-control" formControlName="number">
 			    	<label for="number">Número de celular</label>
 
-			    	<div *ngIf = "form.controls.number.errors && form.controls.number.dirty">
+			    	<div *ngIf = "form.controls.number.errors && form.controls.number.touched">
 						<div *ngIf = "form.controls.number.errors.required" class="alert alert-danger">
-							El campo es requerido
+							El campo número de celular es requerido
 						</div>
 
 						<div *ngIf = "form.controls.number.errors.sinEspacios" class="alert alert-danger">
@@ -71,9 +75,9 @@
 				    <textarea type="text" id="message" class="md-textarea" formControlName="message"></textarea>
 				    <label for="message">Tu mensaje</label>
 
-				    <div *ngIf = "form.controls.message.errors && form.controls.message.dirty">
+				    <div *ngIf = "form.controls.message.errors && form.controls.message.touched">
 						<div *ngIf = "form.controls.message.errors.required" class="alert alert-danger">
-							El campo es requerido
+							El campo del mensaje es requerido
 						</div>		
 						<div *ngIf = "form.controls.message.errors.maxlength" class="alert alert-danger">
 							El campo requiere maximo 250 caracteres
@@ -82,7 +86,9 @@
 
 				</div>
 			</div>
-
+	
+			<!-- Boton de submit-->
+			<button class="btn btn-primary" [disabled]= "!form.valid">Enviar</button>
 			</form>
 
       	</div>
