Some minor adjusts to contact form padding and the component structure

--- a/src/app/landing-page/content/contact/contact.component.html
+++ b/src/app/landing-page/content/contact/contact.component.html
@@ -1,54 +1,53 @@
-<div id="contact" class="container">
-  	<div class="row">
-    	<h1 class="h1-responsive section-title"><span class="indigo-text">|</span> Contactanos <span class="indigo-text">|</span></h1>
-  	</div>
+<div class="container">
 
-  	<div class="row">
-  	<!-- Parte izquierda -->
-    <div class="col-md-9">
-      	<div class="box wow fadeInLeftBig" data-wow-duration="1.5s">
-	      	<h3>Danos tus datos</h3>
+	<div class="row">
+		<h1 class="h1-responsive section-title"><span class="indigo-text">|</span> Contactanos <span class="indigo-text">|</span></h1>
+	</div>
 
-	      	<!-- Campo del nombre y apellido -->
-	    	<div class="md-form">
-	    		<i class="fa fa-user prefix"></i>
-			    <input type="text" id="form1" class="form-control">
-			    <label for="form1" class="">Nombre y apellido</label>
-		 	</div>
+	<div class="row">
+		<!-- Parte izquierda -->
+		<div class="col-md-9">
+			<div class="box wow fadeInLeftBig" data-wow-duration="1.5s">
+				<h3 id="contactTitle">Danos tus datos</h3>
 
-		 	<!-- Campo del correo -->
-		 	<div class="md-form">
-	    		<i class="fa fa-envelope prefix"></i>
-		    	<input type="text" id="form2" class="form-control">
-		    	<label for="form2">Correo</label>
+				<!-- Campo del nombre y apellido -->
+				<div class="md-form">
+					<i class="fa fa-user prefix"></i>
+					<input type="text" id="name" class="form-control">
+					<label for="name" class="">Nombre y apellido</label>
+				</div>
+
+				<!-- Campo del correo -->
+				<div class="md-form">
+					<i class="fa fa-envelope prefix"></i>
+					<input type="text" id="email" class="form-control">
+					<label for="email">Correo</label>
+				</div>
+				
+				<!-- Campo del número de celular -->
+				<div class="md-form">
+					<i class="fa fa-phone prefix"></i>
+					<input type="text" id="phone" class="form-control">
+					<label for="phone">Número de celular</label>
+				</div>
+
+				<!-- Campo del mensaje -->
+				<div class="md-form">
+					<i class="fa fa-pencil prefix"></i>
+					<textarea type="text" id="message" class="md-textarea"></textarea>
+					<label for="message">Tu mensaje</label>
+				</div>
+
 			</div>
-			
-			<!-- Campo del número de celular -->
-			<div class="md-form">
-	    		<i class="fa fa-mobile prefix"></i>
-		    	<input type="text" id="form2" class="form-control">
-		    	<label for="form2">Número de celular</label>
+		</div>
+
+		<!-- Parte derecha -->
+		<div class="col-md-3">
+
+			<!-- Icono de contacto -->
+			<div class="wow fadeInRightBig" data-wow-duration="1.5s">
+				<img  class="img-responsive" id="imgContacto" src="src/assets/img/contact/contactar1.png">	
 			</div>
-
-			<!-- Campo del mensaje -->
-			<div class="md-form">
-			    <i class="fa fa-pencil prefix"></i>
-			    <textarea type="text" id="form8" class="md-textarea"></textarea>
-			    <label for="form8">Tu mensaje</label>
-			</div>
-
-      	</div>
-    </div>
-
-    <!-- Parte derecha -->
-    <div class="col-md-3">
-
-    	<!-- Icono de contacto -->
-    	<div class="wow fadeInRightBig" data-wow-duration="1.5s">
-    		<img  class="img-responsive" id="imgContacto" src="src/assets/img/contact/contactar1.png">	
-    	</div>
-    </div>
-  	</div>
-
-
+		</div>
+	</div>
 </div>
