--- a/src/app/landing-page/content/contact/contact.component.scss
+++ b/src/app/landing-page/content/contact/contact.component.scss
@@ -10,7 +10,7 @@
   padding: 10px 25px;
   text-align: left;
   display: block;
-  margin-top: 60px;
+  margin-top: 10px;
   margin-bottom: 10px;
 }
 
@@ -18,3 +18,7 @@
   margin: 1em auto;
 }
 
+#contactTitle{
+  margin-bottom: 1em;
+  margin-top: 0.5em;
+}
