--- a/src/app/landing-page/content/content.component.html
+++ b/src/app/landing-page/content/content.component.html
@@ -1,3 +1,3 @@
-<app-carousel></app-carousel>
-<app-services></app-services>
-<app-contact></app-contact>
+<app-carousel id="home"></app-carousel>
+<app-services id="services"></app-services>
+<app-contact id="contact"></app-contact>
