--- a/src/app/landing-page/content/carousel/carousel.component.html
+++ b/src/app/landing-page/content/carousel/carousel.component.html
@@ -67,7 +67,7 @@
       <div class="full-bg-img flex-center white-text">
         <ul class="animated fadeInUp col-md-12">
           <li>
-            <h1 class="h1-responsive">DEALERS</h1>
+            <h1 class="h1-responsive">Bienvenido</h1>
           </li>
           <li>
             <p>Bienvenido</p>
