--- a/src/app/landing-page/content/content.component.html
+++ b/src/app/landing-page/content/content.component.html
@@ -1,4 +1,4 @@
 <app-carousel></app-carousel>
 <app-services></app-services>
-<app-coverage></app-coverage>
+<app-coverage id="coverage"></app-coverage>
 <app-contact></app-contact>
