Small style fixes

--- a/src/app/landing-page/content/contact/contact.component.html
+++ b/src/app/landing-page/content/contact/contact.component.html
@@ -10,7 +10,7 @@
 	     	<h3>Danos tus datos</h3>
 				<hr>
 			
-				<form novalidate [formGroup] = "form" >
+				<form novalidate [formGroup] = "form" > 
 
 	      	<!-- Campo del nombre y apellido -->
 	      	<div class="form-group">
@@ -83,7 +83,7 @@
 					</div>
 	
 				<!-- Boton de submit-->
-					<button class="btn btn-primary" [disabled]= "!form.valid">Enviar</button>
+					<button class="btn indigo darken-4 flex-item waves-effect waves-light" [disabled]= "!form.valid">Enviar</button>
 				</form>
 			</div>
     </div>
