--- a/src/app/landing-page/content/about-us/about-us.component.html
+++ b/src/app/landing-page/content/about-us/about-us.component.html
@@ -12,7 +12,7 @@ non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
   </div>
   <div class="row">
     <div class="col-md-4 col-xs-12">
-      <figure class="snip1515">
+      <figure class="profile-card">
         <div class="profile-image"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample47.jpg" alt="sample47" /></div>
         <figcaption>
           <h3>Fleece Marigold</h3>
@@ -26,7 +26,7 @@ non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
       </figure>
     </div>
     <div class="col-md-4 col-xs-12">
-      <figure class="snip1515">
+      <figure class="profile-card">
         <div class="profile-image"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample83.jpg" alt="sample83" /></div>
         <figcaption>
           <h3>Norman Gordon</h3>
@@ -40,7 +40,7 @@ non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
       </figure>
     </div>
     <div class="col-md-4 col-xs-12">
-      <figure class="snip1515">
+      <figure class="profile-card">
         <div class="profile-image"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample70.jpg" alt="sample70" /></div>
         <figcaption>
           <h3>Ruby Von Rails</h3>
@@ -56,7 +56,7 @@ non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
   </div>
   <div class="row">
     <div class="col-md-4 col-xs-12">
-      <figure class="snip1515">
+      <figure class="profile-card">
         <div class="profile-image"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample47.jpg" alt="sample47" /></div>
         <figcaption>
           <h3>Fleece Marigold</h3>
@@ -70,7 +70,7 @@ non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
       </figure>
     </div>
     <div class="col-md-4 col-xs-12">
-      <figure class="snip1515">
+      <figure class="profile-card">
         <div class="profile-image"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample83.jpg" alt="sample83" /></div>
         <figcaption>
           <h3>Norman Gordon</h3>
@@ -84,7 +84,7 @@ non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
       </figure>
     </div>
     <div class="col-md-4 col-xs-12">
-      <figure class="snip1515">
+      <figure class="profile-card">
         <div class="profile-image"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample70.jpg" alt="sample70" /></div>
         <figcaption>
           <h3>Ruby Von Rails</h3>
