--- a/src/app/landing-page/content/about-us/about-us.component.scss
+++ b/src/app/landing-page/content/about-us/about-us.component.scss
@@ -1,7 +1,7 @@
-@import url(https://fonts.googleapis.com/css?family=Open+sans);
-@import url(http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css);
-@import url(https://fonts.googleapis.com/css?family=Playfair+Display);
-.snip1515 {
+@import url(https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css);
+@import 'src/assets/sass/variables';
+
+.profile-card {
   font-family: 'Open Sans', Arial, sans-serif;
   position: relative;
   float: left;
@@ -16,26 +16,26 @@
   box-shadow: none !important;
 }
 
-.snip1515 * {
+.profile-card * {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
-.snip1515 .profile-image {
+.profile-card .profile-image {
   display: inline-block;
   width: 80%;
   z-index: 1;
   position: relative;
   padding: 10px;
-  border: 2px solid #e8b563;
+  border: 2px solid $third-color;
 }
 
-.snip1515 .profile-image img {
+.profile-card .profile-image img {
   max-width: 100%;
   vertical-align: top;
 }
 
-.snip1515 figcaption {
+.profile-card figcaption {
   width: 100%;
   background-color: #F2F2F2;
   color: #555;
@@ -44,50 +44,49 @@
   display: inline-block;
 }
 
-.snip1515 h3,
-.snip1515 h4,
-.snip1515 p {
+.profile-card h3,
+.profile-card h4,
+.profile-card p {
   margin: 0 0 5px;
 }
 
-.snip1515 h3 {
+.profile-card h3 {
   font-weight: 600;
   font-size: 1.3em;
   font-family: 'Playfair Display', Arial, sans-serif;
 }
 
-.snip1515 h4 {
+.profile-card h4 {
   color: #8c8c8c;
   font-weight: 400;
   letter-spacing: 2px;
 }
 
-.snip1515 p {
+.profile-card p {
   font-size: 0.9em;
   letter-spacing: 1px;
   opacity: 0.9;
 }
 
-.snip1515 .icons {
+.profile-card .icons {
   text-align: center;
   width: 100%;
 }
 
-.snip1515 i {
+.profile-card i {
   padding: 10px 2px;
   display: inline-block;
   font-size: 18px;
   font-weight: normal;
-  color: #e8b563;
+  color: $accent-color;
   opacity: 0.75;
 }
 
-.snip1515 i:hover {
+.profile-card i:hover {
   opacity: 1;
   -webkit-transition: all 0.35s ease;
   transition: all 0.35s ease;
 }
-
 
 .section-title {
   margin: 1em auto;
