--- a/src/app/landing-page/content/contact/contact.component.scss
+++ b/src/app/landing-page/content/contact/contact.component.scss
@@ -1,4 +1,5 @@
 @import 'src/assets/sass/variables';
+
 .container {
   margin-bottom: 20px;
   z-index: 1;
@@ -13,6 +14,11 @@
   margin-top: 10px;
   margin-bottom: 10px;
 }
+
+.md-form .prefix.active{
+  color: $third-color;
+}
+
 
 .section-title {
   margin: 1em auto;
