--- a/src/app/landing-page/content/content.component.html
+++ b/src/app/landing-page/content/content.component.html
@@ -3,3 +3,4 @@
 <app-coverage id="coverage"></app-coverage>
 <app-about-us id="about-us"></app-about-us>
 <app-contact id="contact"></app-contact>
+<!--<app-product-list id ="products"></app-product-list>-->
