--- a/src/app/landing-page/navbar/navbar.component.html
+++ b/src/app/landing-page/navbar/navbar.component.html
@@ -25,6 +25,9 @@
         <li class="nav-item">
           <a data-scroll href="#contact" class="nav-link">Contacto</a>
         </li>
+      <li class="nav-item">
+          <a data-scroll href="/products" class="nav-link">Productos</a>
+      </li>
       </ul>
       <form class="form-inline waves-effect waves-light">
         <input class="form-control" type="text" placeholder="Buscar">
@@ -33,3 +36,4 @@
     </div>
 </nav>
 <!--/.Navbar-->
+<router-outlet></router-outlet>
