--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,3 +1,10 @@
 <p>
   products works!
 </p>
+
+<nav>
+	<button class="btn btn-primary" routerLink="list">Lista</button>
+	<button class="btn btn-primary" routerLink="detail">Detalle</button>
+</nav>
+
+<router-outlet></router-outlet>
