--- a/src/app/distributors/distributors.component.html
+++ b/src/app/distributors/distributors.component.html
@@ -4,7 +4,7 @@
     <div class="col-xs-12 col-md-6 col-lg-4" *ngFor="let distributor of distributors">
       <div class="card">
         <div class="view overlay hm-white-slight">
-          <img src={{distributor.photo}} class="img-fluid" alt="">
+          <img src="https://static.pexels.com/photos/3348/dirty-horror-duck.jpg" class="img-fluid" alt="">
           <a href="#">
             <div class="mask"></div>
           </a>
