--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,6 +1,20 @@
 <h2>Product List</h2>
-<div class ="product-list" *ngFor="let product of products">
-  <div>
-    {{product.name}}
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-md-6 col-lg-4" *ngFor="let product of products">
+      <div class="card">
+        <div class="view overlay hm-white-slight">
+          <img src="https://static.pexels.com/photos/128402/pexels-photo-128402.jpeg" class="img-fluid" alt="">
+          <a href="#">
+            <div class="mask"></div>
+          </a>
+        </div>
+        <div class="card-block">
+          <h4 class="card-title">Producto : {{product.name}}</h4>
+          <p class="card-text">Categoria : {{product.category}} 
+            
+        </div>
+      </div>
+    </div>
   </div>
 </div>
