--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,4 +1,5 @@
-<p>
+
+<!--<p>
   products works!
 </p>
 
@@ -7,4 +8,4 @@
 	<button class="btn btn-primary" routerLink="detail">Detalle</button>
 </nav>
 
-<router-outlet></router-outlet>
+<router-outlet></router-outlet>-->
