--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,31 +1,7 @@
-<div *ngIf="location.path()!=''">
-    <nav id="app-nav" class="navbar navbar-toggleable-md navbar-dark bg-primary fixed-top">
-        <div class="container">
-            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav1" aria-controls="navbarNav1"
-                aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <a class="navbar-brand" href="#">
-                <strong>Navbar</strong>
-            </a>
-            <div class="collapse navbar-collapse" id="navbarNav1">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                       <a class="nav-link" href="#" routerLink="/">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#" routerLink="/distributors">Distributor</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#" routerLink="/retailers">Retailers</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#" routerLink="/products">Products</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-</div>
-<router-outlet id="content"></router-outlet>
+
+
+
+<router-outlet></router-outlet>
+
+
 
