--- a/src/app/landing-page/navbar/navbar.component.html
+++ b/src/app/landing-page/navbar/navbar.component.html
@@ -26,7 +26,8 @@
           <a data-scroll href="#contact" class="nav-link">Contacto</a>
         </li>
       <li class="nav-item">
-          <a data-scroll href="/products" class="nav-link">Productos</a>
+          <a routerLink="/products" routerLinkActive="active" class="nav-link">Productos</a>
+          <!--<a data-scroll href="/products" class="nav-link">Productos</a>-->
       </li>
       </ul>
       <form class="form-inline waves-effect waves-light">
@@ -36,4 +37,4 @@
     </div>
 </nav>
 <!--/.Navbar-->
-<router-outlet></router-outlet>
+<!--<router-outlet></router-outlet>-->
