--- a/src/app/retailers/retailers.component.html
+++ b/src/app/retailers/retailers.component.html
@@ -1,20 +1,72 @@
-<h2>Retailers List</h2>
-<div class="container">
+<nav class="navbar navbar-toggleable-md navbar-dark "id="nav1">
+  <div class="container">
+
+    <a class="navbar-brand" href="#home">
+      <img id="logo" src="src/logo.png">
+    </a>
+
+    <ul class="navbar-nav mr-auto" >
+      <li class="nav-item">
+          <a routerLink="/products" routerLinkActive="active" class="nav-link">Productos</a>
+      </li>
+      <li class="nav-item">
+          <a routerLink="/retailers" routerLinkActive="active" class="nav-link">Minoristas</a>
+      </li>
+    </ul>
+    </div>
+</nav>
+
+
   <div class="row">
-    <div class="col-xs-12 col-md-6 col-lg-4" *ngFor="let retailer of retailers">
-      <div class="card">
-        <div class="view overlay hm-white-slight">
-          <img src="https://static.pexels.com/photos/36003/duck-funny-soft-toy-toys.jpg" class="img-fluid" alt="">
-          <a href="#">
-            <div class="mask"></div>
-          </a>
+    <div class="col-sm-3 col-lg-2">
+      <h2>Busqueda</h2>
+      <br/><br/>
+      <div class="container">
+          <form>
+              <div class="form-group">
+                <label>Nombre</label>
+                <input type="text">
+              </div>
+          </form>
+          <form>
+              <div class="form-group">
+                <label>Departamento</label>
+                <input type="text">
+              </div>
+          </form>
+          <form>
+              <div class="form-group">
+                <label>Calificacion</label>
+                <input type="text">
+              </div>
+          </form>
+      </div>  
+      
+    </div>
+
+    <div class="col-sm-9 col-lg-10">
+
+        <h2>Retailers List</h2>
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12 col-md-6 col-lg-4" *ngFor="let retailer of retailers">
+              <div class="card">
+                <div class="view overlay hm-white-slight">
+                  <!--<img *ngSrc="https://static.pexels.com/photos/36003/duck-funny-soft-toy-toys.jpg" class="img-fluid" alt="">-->
+                  <img src="{{retailer.photo.url}}" alt="">
+                  <a href="#">
+                    <div class="mask"></div>
+                  </a>
+                </div>
+                <div class="card-block">
+                  <h4 class="card-title">Nombre :{{retailer.name}}</h4>
+                  <p class="card-text">email : {{retailer.email}} <br> Celular : {{retailer.phoneNumber}}</p>
+
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="card-block">
-          <h4 class="card-title">Nombre :{{retailer.name}}</h4>
-          <p class="card-text">email : {{retailer.email}} <br> Celular : {{retailer.phoneNumber}}</p>
-            
-        </div>
-      </div>
     </div>
   </div>
-</div>
+
