--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -53,7 +53,7 @@
                 <div class="col-xs-12 col-md-6 col-lg-4" *ngFor="let product of products">
                   <div class="card">
                     <div class="view overlay hm-white-slight">
-                      <img src="{{product.photo.url}}" alt="">
+                      <img src="{{product.photo.url}}" class="img-fluid"alt="">
                       <a href="#">
                         <div class="mask"></div>
                       </a>
