--- a/src/styles.scss
+++ b/src/styles.scss
@@ -39,3 +39,13 @@ body {
   background-color: #333333;
 }
 
+.card{
+  margin-bottom: 10%;
+  img{
+    min-height: 300px;
+    max-height: 300px;
+    width: 100%;
+    object-fit: cover;
+  }
+}
+
