--- a/src/app/distributor-detail/distributor-detail.component.html
+++ b/src/app/distributor-detail/distributor-detail.component.html
@@ -1,12 +1,10 @@
-<div id="profile" class="container-fluid" *ngFor="let distributor of distributor">
+<div id="profile" class="container-fluid">
   <div class="col-md-12">
     <div class="row">
       <div id="profile-banner" class="card">
 
         <img class="img-fluid" id="background-image" src="src/assets/img/distributors/background.jpg" alt="background">
-        <!-- Descomentar y comentar la imagen de abajo cuando funcionen las urls de las imagenes -->
-        <!-- <img id="profile-img" src={{distributor.photo}} class="img-fluid" alt="profile image"> -->
-        <img id="profile-img" src="https://static.pexels.com/photos/3348/dirty-horror-duck.jpg" alt="profile image">
+        <img id="profile-img" src={{distributor.photo.url}} class="img-fluid" alt="profile image">
 
         <div class="card-block container">
           <div class="row">
@@ -60,3 +58,5 @@
   </div>
   <br>
 </div>
+
+{{distributor | json}}
