--- a/src/app/distributors/distributors.component.html
+++ b/src/app/distributors/distributors.component.html
@@ -1,18 +1,47 @@
-<div class="container">
+<div class="container-fluid">
   <div class="row">
-    <div class="col-xs-12 col-md-6 col-lg-4" *ngFor="let distributor of distributors">
-      <div class="card">
-        <div class="view overlay hm-white-slight">
-          <!-- Descomentar y comentar la imagen de abajo cuando funcionen las urls de las imagenes -->
-          <!-- <img src={{distributor.photo}} class="img-fluid" alt=""> -->
-          <img src="https://static.pexels.com/photos/3348/dirty-horror-duck.jpg" class="img-fluid" alt="">
-          <a href="/distributors/{{distributor.id}}">
-            <div class="mask"></div>
-          </a>
-        </div>
-        <div class="card-block">
-          <h4 class="card-title">{{distributor.name}}</h4>
-          <p class="card-text">{{distributor.email}} <br> {{distributor.phoneNumber}}</p>
+    <div class="col-sm-3 col-lg-2">
+      <h2>Busqueda</h2>
+      <br/><br/>
+      <div class="container">
+        <form>
+          <div class="form-group">
+            <label>Nombre</label>
+            <input type="text">
+          </div>
+        </form>
+        <form>
+          <div class="form-group">
+            <label>Categoria</label>
+            <input type="text">
+          </div>
+        </form>
+        <form>
+          <div class="form-group">
+            <label>Precio</label>
+            <input type="text">
+          </div>
+        </form>
+      </div>
+
+    </div>
+    <div class="col-sm-9 col-lg-10">
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12 col-md-6 col-lg-4" *ngFor="let distributor of distributors">
+            <div class="card">
+              <div class="view overlay hm-white-slight">
+                <img src={{distributor.photo.url}} class="img-fluid" alt="">
+                <a href="/distributors/{{distributor.id}}">
+                  <div class="mask"></div>
+                </a>
+              </div>
+              <div class="card-block">
+                <h4 class="card-title">{{distributor.name}}</h4>
+                <p class="card-text">{{distributor.email}} <br> {{distributor.phoneNumber}}</p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
