--- a/src/app/landing-page/content/content.component.html
+++ b/src/app/landing-page/content/content.component.html
@@ -1,6 +1,5 @@
 <app-carousel id="home"></app-carousel>
 <app-services id="services"></app-services>
-<app-coverage id="coverage"></app-coverage>
+<!--<app-coverage id="coverage"></app-coverage>-->
 <app-about-us id="about-us"></app-about-us>
 <app-contact id="contact"></app-contact>
-<!--<app-product-list id ="products"></app-product-list>-->
