--- a/src/app/distributor-detail/distributor-detail.component.html
+++ b/src/app/distributor-detail/distributor-detail.component.html
@@ -40,6 +40,7 @@
           <marker position="{{distributor.latitude}} {{distributor.longitude}}"></marker>
         </ng2-map>
         <div class="card-block container">
+          {{distributorAddress | async}}
         </div>
       </div>
     </div>
