--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -26,7 +26,7 @@
           <form>
               <div class="form-group">
                 <label>Nombre</label>
-                <input type="text">
+                <input type="text" [(ngModel)]="filtername" [ngModelOptions]="{standalone: true}">
               </div>
           </form>
           <form>
@@ -50,17 +50,18 @@
       <h2>Productos</h2>
             <div class="container">
               <div class="row">
-                <div class="col-xs-12 col-md-6 col-lg-4" *ngFor="let product of products">
+                <div class="col-xs-12 col-md-6 col-lg-4" *ngFor="let item of dataItems | filterOfferedProductsName : filtername">
                   <div class="card">
                     <div class="view overlay hm-white-slight">
-                      <img src="{{product.photo.url}}" class="img-fluid"alt="">
+                      <img src="{{item.product.photo.url}}" class="img-fluid"alt="">
                       <a href="#">
                         <div class="mask"></div>
                       </a>
                     </div>
                     <div class="card-block">
-                      <h4 class="card-title">Producto : {{product.name}}</h4>
-                      <p class="card-text">Categoria : {{product.category}}  
+                      <h4 class="card-title">Producto : {{item.product.name}}</h4>
+                      <p class="card-text">Categoria : {{item.product.category}}  </p>
+                      <p class="card-text">Distribuidor: {{item.distributor.name}}</p>                         
                     </div>
                   </div>
                 </div>
