--- a/src/app/products/product-detail.component.html
+++ b/src/app/products/product-detail.component.html
@@ -1,3 +1,26 @@
-<h2>Producto detalle</h2>
+<div class="row">
+  <div class="col-sm-3 col-lg-2">
+    <h2>Busqueda</h2>
+    <br/><br/>    
+  </div>
 
-<!-- http://localhost:4200/products/detail/5 -->
+	<div class="col-sm-9 col-lg-10">
+		<h2>Productos</h2>
+	    <div class="container">
+	        <div class="row">
+	        	<div class="col-xs-12 col-md-6 col-lg-4" *ngFor="let product of products"> <!--sadsasadsd -->
+	            	<div class="card">
+	              		<div class="view overlay hm-white-slight">
+	                		<img src="{{product.photo.url}}" class="img-fluid"alt="">
+	                		<a href="#"> <div class="mask"></div> </a>
+	              		</div>
+		              	<div class="card-block">
+		                	<h4 class="card-title">Producto : {{product.name}}</h4>
+		                	<p class="card-text">Categoria : {{product.category}}  
+		              	</div>
+	            	</div>
+	        	</div>
+	        </div>
+	    </div>
+	</div>
+</div>
