--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,16 +11,16 @@
             <div class="collapse navbar-collapse" id="navbarNav1">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                       <a class="nav-link" href="#" routerLink="/">Home</a>
+                       <a class="nav-link" href="#" routerLink="/">Inicio</a>
                     </li>
                     <li class="nav-item" [class.active]="location.path()=='/distributors'">
-                        <a class="nav-link" href="#" routerLink="/distributors">Distributor</a>
+                        <a class="nav-link" href="#" routerLink="/distributors">Distribuidores</a>
                     </li>
                     <li class="nav-item" [class.active]="location.path()=='/retailers'">
-                        <a class="nav-link" href="#" routerLink="/retailers">Retailers</a>
+                        <a class="nav-link" href="#" routerLink="/retailers">Minoristas</a>
                     </li>
                     <li class="nav-item" [class.active]="location.path()=='/products'">
-                        <a class="nav-link" href="#" routerLink="/products">Products</a>
+                        <a class="nav-link" href="#" routerLink="/products">Productos</a>
                     </li>
                 </ul>
             </div>
