--- a/src/app/distributors/distributors.component.html
+++ b/src/app/distributors/distributors.component.html
@@ -12,13 +12,13 @@
         </form>
         <form>
           <div class="form-group">
-            <label>Categoria</label>
+            <label>Departamento</label>
             <input type="text">
           </div>
         </form>
         <form>
           <div class="form-group">
-            <label>Precio</label>
+            <label>Calificacion</label>
             <input type="text">
           </div>
         </form>
