--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,18 @@
+@import 'src/assets/sass/variables';
+
 .navbar-brand {
   height: 2.5em;
   #logo {
     height: 100%;
+  }
+}
+
+.top-nav-collapse {
+  background-color: $primary-color;
+}
+
+@media only screen and (max-width: 768px) {
+  .navbar {
+    background-color: $primary-color;
   }
 }
