--- a/src/app/products/product-detail.component.html
+++ b/src/app/products/product-detail.component.html
@@ -8,15 +8,17 @@
 		<h2>Productos</h2>
 	    <div class="container">
 	        <div class="row">
-	        	<div class="col-xs-12 col-md-6 col-lg-4" *ngFor="let product of products"> <!--sadsasadsd -->
+	        	<div class="col-xs-12 col-md-6 col-lg-4" *ngFor="let product of products1"> <!--sadsasadsd -->
 	            	<div class="card">
 	              		<div class="view overlay hm-white-slight">
-	                		<img src="{{product.photo.url}}" class="img-fluid"alt="">
+	                		<img src="{{product.data.product.photo.url}}" class="img-fluid"alt=""> 
 	                		<a href="#"> <div class="mask"></div> </a>
 	              		</div>
 		              	<div class="card-block">
-		                	<h4 class="card-title">Producto : {{product.name}}</h4>
-		                	<p class="card-text">Categoria : {{product.category}}  
+		                	<h4 class="card-title">Producto : {{product.data.product.name}}</h4>
+		                	<p class="card-text">Categoria : {{product.data.product.category}}  
+		                	<p class="card-title">Peso : {{product.data.product.weight}}</p>
+		                	<p class="card-title">Precio : {{product.data.price}}</p>
 		              	</div>
 	            	</div>
 	        	</div>
@@ -24,3 +26,4 @@
 	    </div>
 	</div>
 </div>
+
