--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -33,8 +33,8 @@
                 |filteredOfferedProductsCategory : filtercategory 
                 |filterOfferedProductsPrice :filterprice ">
                   <div class="card">
-                    <div class="view overlay hm-white-slight">
-                      <img src="{{item.product.photo.url}}" class="img-fluid"alt="">
+                    <div class="view overlay hm-white-slight" title="Visita al distribuidor de este producto">
+                      <img src="{{item.product.photo.url}}" class="img-fluid" alt="imagen distributor" >
                       <a href="/products/{{item.id}}">
                         <div class="mask"></div>
                       </a>
