--- a/src/app/products/product-detail.component.html
+++ b/src/app/products/product-detail.component.html
@@ -1,23 +1,27 @@
-<div class="row">
-	<div class="col-sm-9 col-lg-10">
-	    <div class="container">
-	        <div class="row">
-	        	<div class="col-xs-12 col-md-6 col-lg-4" *ngFor="let product of products1"> <!--sadsasadsd -->
-	            	<div class="card">
-	              		<div class="view overlay hm-white-slight">
-	                		<img src="{{product.data.product.photo.url}}" class="img-fluid"alt=""> 
-	                		<a href="#"> <div class="mask"></div> </a>
-	              		</div>
-		              	<div class="card-block">
-		                	<h4 class="card-title">Producto : {{product.data.product.name}}</h4>
-		                	<p class="card-text">Categoria : {{product.data.product.category}}  
-		                	<p class="card-title">Peso : {{product.data.product.weight}}</p>
-		                	<p class="card-title">Precio : {{product.data.price}}</p>
-		              	</div>
-	            	</div>
-	        	</div>
-	        </div>
-	    </div>
-	</div>
+<div class="container">
+    <div class="row" *ngFor="let product of products1">
+    	<div class="col-md-6"> 
+    	   	<div class="card">
+          		<div class="view overlay hm-white-slight zoom_1">
+          			<h4 class="text-center cambiar_color"><strong>{{product.data.product.name}}</strong></h4>
+            		<img src="{{product.data.product.photo.url}}" class="img_product"alt=""> 
+          		</div>
+        	</div>
+    	</div>
+    	<div class="col-md-6">
+    		<h4 class="text-center cambiar_color">Producto : {{ product.data.product.name }}</h4>
+			<p class="card-text letra cambiar_color">Categoria : {{ product.data.product.category }}  </p>
+			<p class="card-title letra cambiar_color">Peso : {{product.data.product.weight }}</p>
+			<p class="card-title letra cambiar_color">Precio : ${{ product.data.price }}</p>
+			<p class="card-title letra cambiar_color">Distribuidor : {{ product.data.distributor.name }}</p>
+				
+			<a href="/distributors/{{product.data.distributor.id}}" title="Conoce al distribuidor!!"> 
+			<img src="{{product.data.distributor.photo.url}}" class="img_distribuidor view overlay hm-white-slight"alt="">  <div class="mask"></div>  </a>
+
+    	</div>
+    </div>
 </div>
+
+
+<app-footer></app-footer>
 
