--- a/src/app/products/products.component.scss
+++ b/src/app/products/products.component.scss
@@ -1,3 +1,32 @@
 .row{
   padding-top: 8vh;
 }
+
+.letra{
+	font-size: 22pt;
+}
+
+.img_product{
+	width: 100%;
+	height: auto;
+	transition: 4s;
+}
+.img_product:hover{
+	transform: scale(1.4);
+	transition: 4s;
+}
+
+.cambiar_color:hover{
+	color: green;
+}
+
+.img_distribuidor{
+	width: 100px;
+	height: 100px;
+	transition: 5s; 
+}
+
+.img_distribuidor:hover{
+	transform: scale(1.2);
+	transition: 5s; 	
+}
